# Lantern_Code

lantern-M0/: Cargo.toml  README.md
lantern-M0/crates/lantern-types/src/: cbor.rs  hash.rs  head.rs  intent.rs  lib.rs
lantern-M1/: Cargo.toml  M0_REPORT.md  README.md
lantern-M1/crates/lantern-store/: M1_INTERFACE.md
lantern-M1/crates/lantern-store/src/: batch.rs  cf.rs  lib.rs
lantern-M1/crates/lantern-types/: WIRE_FORMAT.md
lantern-M1/crates/lantern-types/examples/: generate_vectors.rs
lantern-M1/crates/lantern-types/tests/: vectors.rs
lantern-M2/: Cargo.toml  README.md
lantern-M2/crates/lantern-latest-map/src/: error.rs  tests.rs
lantern-M2/crates/lantern-store/src/: metadata.rs  snapshot.rs  store.rs
lantern-M2/crates/lantern-store/tests/: store_contract.rs
lantern-M2/crates/lantern-types/src/: control.rs  domain.rs  signature.rs
lantern-M2/crates/lantern-types/test-vectors/: v1.json
lantern-M2/crates/lantern-types/tests/: invariants.rs
lantern-M3/: Cargo.toml  M2_DEPENDENCY_LICENSES.tsv  M2_REPORT.md  M3_REPORT.md  README.md
lantern-M3/crates/lantern-history/: Cargo.toml  M3_INTERFACE.md
lantern-M3/crates/lantern-history/src/: proof.rs  storage.rs  tests.rs
lantern-M3/crates/lantern-latest-map/: M2_INTERFACE.md
lantern-M3/crates/lantern-latest-map/src/: lib.rs  proof.rs
lantern-M3/crates/lantern-store/: Cargo.toml
lantern-M3/crates/lantern-store/src/: error.rs
lantern-M3/crates/lantern-types/: Cargo.toml
lantern-M3/crates/lantern-types/src/: primitive.rs
lantern-M4/: Cargo.toml  M4_DEPENDENCY_LICENSES.tsv  M4_REQUIREMENTS_ERRATA.md  M4_RUSTSEC_AUDIT.json  README.md
lantern-M4/crates/lantern-history/src/: lib.rs  structure.rs  tests.rs
lantern-M4/crates/lantern-latest-map/: Cargo.toml
lantern-M4/crates/lantern-latest-map/src/: proof.rs  storage.rs
lantern-M4/crates/lantern-state/: Cargo.toml  M4_INTERFACE.md
lantern-M4/crates/lantern-state/src/: error.rs  lib.rs
lantern-M4/crates/lantern-store/: M1_INTERFACE.md
lantern-M4/crates/lantern-store/src/: cf.rs  lib.rs  store.rs
lantern-M4/crates/lantern-types/src/: control.rs  domain.rs  error.rs  hash.rs  state.rs  validator.rs
lantern-M4/crates/lantern-types/test-vectors/: v1.json
lantern-M4/crates/lantern-types/tests/: invariants.rs
lantern-M5.0/: .gitignore  Cargo.toml  M1_REPORT.md  M2_RUSTSEC_AUDIT.json  M3_DEPENDENCY_LICENSES.tsv  M3_RUSTSEC_AUDIT.json  M4_REPORT.md  M5_0_DEPENDENCY_LICENSES.tsv  M5_0_RECOVERY.md  M5_0_REPORT.md  M5_0_RUSTSEC_AUDIT.json  M5_REQUIREMENTS.md  README.md
lantern-M5.0/crates/lantern-history/src/: error.rs
lantern-M5.0/crates/lantern-latest-map/src/: lib.rs  tests.rs
lantern-M5.0/crates/lantern-state/: M4_P1_P7_FIXTURES.md
lantern-M5.0/crates/lantern-state/src/: authorizer.rs  machine.rs  storage.rs  tests.rs
lantern-M5.0/crates/lantern-store/src/: metadata.rs  snapshot.rs
lantern-M5.0/crates/lantern-store/tests/: store_contract.rs
lantern-M5.0/crates/lantern-types/: WIRE_FORMAT.md
lantern-M5.0/crates/lantern-types/examples/: generate_vectors.rs
lantern-M5.0/crates/lantern-types/src/: lib.rs
lantern-M5.0/tools/m5-compat/: Cargo.toml  README.md
lantern-M5.0/tools/m5-compat/reference/: main.go
lantern-M5.0/tools/m5-compat/scripts/: fetch-build-comet.sh  generate-reference.sh  run-abci-wire-probe.sh  run-gate.sh
lantern-M5.0/tools/m5-compat/src/: lib.rs
lantern-M5.0/tools/m5-compat/test-vectors/: cometbft-v0.38.23.json
lantern-M5.0/tools/m5-compat/tests/: reference_fixture.rs
