[package]
name = "lantern-types"
description = "Canonical Lantern v1 protocol types and cryptographic bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ed25519-dalek.workspace = true
hex.workspace = true
minicbor.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

